# pastypy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  codeql-analysis.yml  pytest.yml
examples/: asyncpaste.py  customsite.py  encryption.py  paste.py
pastypy/: __init__.py  asyncio.py  sync.py
tests/: test_async.py  test_sync.py
