[tool.poetry]
name = "pastypy"
version = "1.0.1"
description = "Pasty API wrapper"
authors = ["Zevaryx <zevaryx@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/zevaryx/pastypy"
repository = "https://github.com/zevaryx/pastypy"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pycryptodome = "^3.14.1"
aiohttp = "^3.8.1"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
python-lsp-server = {extras = ["all"], version = "^1.3.3"}
black = "^22.1.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0", "tomli"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    'ignore::pytest.PytestUnraisableExceptionWarning'
]
addopts = "--cov=pastypy --cov-report=term-missing"
